# google-tasks-mcp-server

./: .gitignore  README.md  debug_auth.py  main.py  pyproject.toml  run_server.py  server.py  start_server.sh  test_all_tools.py  test_server.py
.gemini/: settings.json
